# kayaku

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: deploy-docs.yml  test.yml
docs/: index.md
docs/overrides/partials/: copyright.html
kayaku/: __init__.py  bi_tree.py  doc_parse.py  domain.py  format.py  formatter.py  manager.py  model.py  model.pyi  pretty.py  provider.py  schema_gen.py  spec.py  storage.py  toml_parse.py  util.py  utils.py
kayaku/backend/: __init__.py  api.py  encode.py  env.py  json.py  json5.py  jsonc.py  protocol.py  style.py  transform.py  types.py  wsc.py
kayaku/backend/grammar/: json.lark  json5.lark  jsonc.lark  wsc.lark
kayaku/builtins/: toml_ro.py
kayaku/providers/: toml.py  toml_ro.py
kayaku/toml_utils/: __init__.py  format.py  modify.py
tests/: backend.py  batch_schema_gen.py  bi_tree.py  doc_parse.py  format.py  helper.py  main.py  pretty.py  schema.py  spec.py  storage.py  utils.py
